--- a/rust/agama-lib/Cargo.toml
+++ b/rust/agama-lib/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
+agama-utils = { path = "../agama-utils" }
 async-trait = "0.1.83"
 cidr = { version = "0.3.1", features = ["serde"] }
 futures-util = "0.3.30"
