--- a/rust/xtask/Cargo.toml
+++ b/rust/xtask/Cargo.toml
@@ -11,3 +11,5 @@ clap = { version = "4.5.19", default-features = false }
 clap-markdown = "0.1.4"
 clap_complete = "4.5.32"
 clap_mangen = "0.2.23"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
